# ai-augmented-assessment-framework

./: .cursorignore  .dockerignore  .gitignore  AGENTS.md  PROJECT_CHARTER.md  README.md
.claude/: settings.json
.claude/hooks/: pre-commit-secret-scan.sh  session-banner.sh
.codex/: hooks.json
.codex/hooks/: lint-on-save.sh
.cursor/rules/: 000-project-overview.mdc  assessment-generation.mdc  c2m2-expert.mdc  data-cleaning.mdc  document-parsing.mdc  energy-cybersecurity.mdc  evidence-extraction.mdc  executive-reporting.mdc  framework-mapping.mdc  nist-csf-expert.mdc  privacy-protection.mdc  prompt-engineering.mdc
assessments/: README.md
backend/: README.md  conftest.py  pyproject.toml
backend/scripts/: generate_c2m2_yaml.py  generate_cis_controls_yaml.py  generate_cross_framework_equivalence.py  generate_iso_27001_yaml.py  generate_nerc_cip_yaml.py  generate_nist_csf_yaml.py  generate_pci_dss_yaml.py  generate_soc2_yaml.py
backend/src/compliance_platform/: main.py
backend/src/compliance_platform/ai/: README.md  embeddings.py
backend/src/compliance_platform/ai/tests/: test_embeddings.py
backend/src/compliance_platform/api/: README.md  assessments.py  dependencies.py  error_handlers.py  frameworks.py  health.py  ingestion.py
backend/src/compliance_platform/core/: README.md  config.py
backend/src/compliance_platform/models/: README.md  assessment.py  chat.py  framework.py  report.py  schemas.py
backend/src/compliance_platform/repositories/: README.md  assessment_repository.py  vector_repository.py
backend/src/compliance_platform/repositories/tests/: test_vector_repository.py
backend/src/compliance_platform/services/: README.md  assessment_service.py  chat_service.py  chunking.py  document_parsers.py  export_service.py  framework_loader.py  ingestion_service.py  mapping_service.py  report_service.py  scoring_service.py
backend/src/compliance_platform/services/tests/: test_assessment_service.py  test_chat_service.py  test_chunking.py  test_document_parsers.py  test_export_service.py  test_framework_loader.py  test_ingestion_service.py  test_mapping_service.py  test_report_service.py  test_scoring_service.py
backend/tests/: README.md  test_assessment_api_integration.py  test_ingestion_api_integration.py
data/processed/: README.md
data/raw/: README.md
data/sample_evidence/: README.md  synthetic_access_control_policy.md  synthetic_incident_response_narrative.txt
deployment/: README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  frontend.nginx.conf
docs/: current_sprint.md
docs/adr/: ADR-0001-src-layout-deviation.md  ADR-0002-data-as-code-separation.md  ADR-0003-progressive-hook-activation.md  ADR-0004-mcp-integration-sequencing.md  (+24 more)
docs/product/: README.md  (+9 more)
framework_mapping/: README.md  c2m2_v2_1.yaml  cis_controls_v8.yaml  cross_framework_equivalence.yaml  iso_27001.yaml  nerc_cip.yaml  nist_csf_2_0.yaml  pci_dss_v4.yaml  soc2_tsc.yaml
frontend/: README.md  package-lock.json  package.json  vite.config.ts
infrastructure/: README.md
notebooks/: README.md
prompts/: README.md
reports/: README.md
scripts/: README.md  install-git-hooks.sh
tests/: README.md
(+69 files in other folders)
