[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-platform"
version = "0.1.0"
description = "AI-augmented compliance assessment platform backend (C2M2, NIST CSF 2.0)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "lancedb>=0.9",
    "pyarrow>=14.0",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "sqlmodel>=0.0.21",
    "fastembed>=0.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "fpdf2>=2.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src", "tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency-injection pattern (File(...), Depends(...) as
# argument defaults) is the idiomatic, documented way to write a route
# handler; B008 exists to catch a different, real bug (mutable/expensive
# default args) and does not apply to this framework pattern.
"src/compliance_platform/api/*.py" = ["B008"]
# One-off C2M2 data transcription script (scripts/README.md: not part of
# the application). Practice text is transcribed verbatim from the
# source PDF; reflowing long quoted strings to fit the line-length limit
# risks introducing a transcription error into real regulatory-standard
# text, which is a worse outcome than a long line in a script no one
# reads for style.
"scripts/generate_c2m2_yaml.py" = ["E501"]
